PlayerBox gekoppeld aan kleur en naam

--- a/src/main/resources/views/layout_game_playerbox.fxml
+++ b/src/main/resources/views/layout_game_playerbox.fxml
@@ -10,10 +10,11 @@
             fx:id="playerBox">
     <right>
         <VBox fx:id="vbox" prefWidth="192">
-            <VBox alignment="CENTER" spacing="5" style="-fx-border-color: black; -fx-padding: 20 20 20 20;">
-                <Label style="-fx-font-size: 14;">Player 1:</Label>
-                <Label fx:id="playerNameLabel" style="-fx-font-size: 14;">Name</Label>
-                <Label style="-fx-font-size: 14;">Score:</Label>
+            <VBox fx:id="background1" alignment="CENTER" spacing="5"
+                  style="-fx-border-color: black; -fx-padding: 20 20 20 20;">
+                <Label textFill="white" style="-fx-font-size: 14; -fx-font-weight: bold">Player 1:</Label>
+                <Label fx:id="playerNameLabel1" style="-fx-font-size: 14;">Name</Label>
+                <Label style="-fx-font-size: 14;">Score: 0</Label>
                 <HBox spacing="10" style="-fx-padding:0 0 0 20">
                     <ImageView fitHeight="65" fitWidth="70">
                         <Image url="/images/train.png"/>
@@ -22,10 +23,11 @@
                 </HBox>
 
             </VBox>
-            <VBox alignment="CENTER" spacing="5" style="-fx-border-color: black; -fx-padding: 20 20 20 20;">
-                <Label style="-fx-font-size: 14;">Player 2:</Label>
-                <Label style="-fx-font-size: 14;">Name</Label>
-                <Label style="-fx-font-size: 14;">Score:</Label>
+            <VBox fx:id="background2" alignment="CENTER" spacing="5"
+                  style="-fx-border-color: black; -fx-padding: 20 20 20 20;">
+                <Label style="-fx-font-size: 14; -fx-font-weight: bold">Player 2:</Label>
+                <Label fx:id="playerNameLabel2" style="-fx-font-size: 14;">Name</Label>
+                <Label style="-fx-font-size: 14;">Score: 0</Label>
                 <HBox spacing="10" style="-fx-padding:0 0 0 20">
                     <ImageView fitHeight="65" fitWidth="70">
                         <Image url="/images/train.png"/>
@@ -33,10 +35,11 @@
                     <Label style="-fx-font-size: 14; -fx-padding: 25 0 0 0;">40x</Label>
                 </HBox>
             </VBox>
-            <VBox alignment="CENTER" spacing="5" style="-fx-border-color: black; -fx-padding: 20 20 20 20;">
-                <Label style="-fx-font-size: 14;">Player 3:</Label>
-                <Label style="-fx-font-size: 14;">Name</Label>
-                <Label style="-fx-font-size: 14;">Score:</Label>
+            <VBox fx:id="background3" alignment="CENTER" spacing="5"
+                  style="-fx-border-color: black; -fx-padding: 20 20 20 20;">
+                <Label style="-fx-font-size: 14; -fx-font-weight: bold;">Player 3:</Label>
+                <Label fx:id="playerNameLabel3" style="-fx-font-size: 14;">Name</Label>
+                <Label style="-fx-font-size: 14;">Score: 0</Label>
                 <HBox spacing="10" style="-fx-padding:0 0 0 20">
                     <ImageView fitHeight="65" fitWidth="70">
                         <Image url="/images/train.png"/>
