--- a/src/main/resources/views/layout_routes_map.fxml
+++ b/src/main/resources/views/layout_routes_map.fxml
@@ -8,17 +8,14 @@
 <Pane xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
       fx:controller="client.ui.GameRoutesMapController"
-      prefHeight="1920" prefWidth="1000.0">
+      prefHeight="1080" prefWidth="1920.0"
+      stylesheets="">
 
     <ImageView>
         <Image url="/images/Background.png"/>
     </ImageView>
     <Pane fx:id="mainPane" prefWidth="1920" prefHeight="1080"/>
     <Pane fx:id="informationPane" prefWidth="1920" prefHeight="1080"/>
-    <fx:include source="overlay_build_message.fxml" fx:id="route_costs" layoutY="100" layoutX="2020"/>
     <Label fx:id="score" onMouseEntered="#ScoreEntered" onMouseExited="#ScoreExited" layoutX="870" layoutY="10"
-           textFill="white"
-           style="-fx-background-color: purple; -fx-background-radius: 10; -fx-border-radius: 10; -fx-border-color: black; -fx-padding: 10 10 10 10">
-        Points per route
-    </Label>
+           styleClass="routePointsButton" text="Points per route"/>
 </Pane>
