--- a/src/main/resources/views/layout_routes_map.fxml
+++ b/src/main/resources/views/layout_routes_map.fxml
@@ -9,13 +9,13 @@
       xmlns="http://javafx.com/javafx"
       fx:controller="client.ui.GameRoutesMapController"
       prefHeight="1080" prefWidth="1920.0"
-      stylesheets="">
+      stylesheets="/css/routesmapcss.css">
 
     <ImageView>
         <Image url="/images/Background.png"/>
     </ImageView>
     <Pane fx:id="mainPane" prefWidth="1920" prefHeight="1080"/>
     <Pane fx:id="informationPane" prefWidth="1920" prefHeight="1080"/>
-    <Label fx:id="score" onMouseEntered="#ScoreEntered" onMouseExited="#ScoreExited" layoutX="870" layoutY="10"
-           styleClass="routePointsButton" text="Points per route"/>
+    <Label styleClass="routePointsButton" fx:id="score" layoutX="870" layoutY="10"
+           text="Points per route" onMouseEntered="#ScoreEntered" onMouseExited="#ScoreExited"/>
 </Pane>
