--- a/src/main/resources/views/layout_full_game.fxml
+++ b/src/main/resources/views/layout_full_game.fxml
@@ -15,6 +15,6 @@
     <fx:include source="overlay_pause_menu.fxml" layoutX="1920"/>
 
     <!--Overlay messages:-->
-    <fx:include source="overlay_build_message.fxml" fx:id="route_costs" layoutY="100" layoutX="2020"/>
+    <Pane layoutX="2020" layoutY="100" fx:id="dialogHolder"/>
 
 </Pane>
