--- a/src/main/resources/views/main_menu/layout_main_menu_play.fxml
+++ b/src/main/resources/views/main_menu/layout_main_menu_play.fxml
@@ -8,7 +8,7 @@
       xmlns="http://javafx.com/javafx"
       fx:controller="client.ui.MainMenuControllers.MainMenuPlayController"
       prefHeight="400.0" prefWidth="600.0"
-      spacing="20" fx:id="startMenu">
+      spacing="20">
     <ImageView fitWidth="550" preserveRatio="true">
         <Image url="/images/makeagame.png"/>
     </ImageView>
