--- a/src/main/resources/views/overlay_build_message.fxml
+++ b/src/main/resources/views/overlay_build_message.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <StackPane xmlns:fx="http://javafx.com/fxml"
            xmlns="http://javafx.com/javafx"
-           fx:controller="client.ui.GameCostsController"
+           fx:controller="client.ui.dialogs.GameCostsDialogController"
            prefHeight="325.0" prefWidth="700.0"
            fx:id="rootPane">
 
