--- a/src/main/resources/views/layout_full_game.fxml
+++ b/src/main/resources/views/layout_full_game.fxml
@@ -13,6 +13,7 @@
                 layoutY="162"/>
     <fx:include source="layout_game_bank.fxml"/>
     <fx:include source="overlay_pause_menu.fxml" layoutX="1920"/>
+    <fx:include source="layout_game_routecard.fxml"/>
 
     <!--Overlay messages:-->
     <fx:include source="overlay_build_message.fxml" fx:id="route_costs" layoutY="100" layoutX="2020"/>
