--- a/src/main/resources/views/layout_main_menu_front_images.fxml
+++ b/src/main/resources/views/layout_main_menu_front_images.fxml
@@ -8,7 +8,7 @@
       fx:controller="client.ui.MainMenuControllers.MainMenuFrontImagesController"
       prefHeight="400.0" prefWidth="600.0">
 
-    <ImageView fx:id="mountains" preserveRatio="true">
+    <ImageView preserveRatio="true">
         <Image url="/images/mountains.png"/>
     </ImageView>
     <HBox fx:id="trainsHBox" layoutX="-1000" layoutY="365">
