--- a/src/main/resources/views/layout_main_menu_load.fxml
+++ b/src/main/resources/views/layout_main_menu_load.fxml
@@ -6,13 +6,12 @@
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
-      fx:controller="client.ui.MainMenuControllers.MainMenuPlayController"
+      fx:controller="client.ui.MainMenuControllers.MainMenuLoadController"
       prefHeight="400.0" prefWidth="600.0"
-      spacing="20" fx:id="startMenu">
-    <ImageView fitWidth="550" preserveRatio="true">
-        <Image url="/images/makeagame.png"/>
-    </ImageView>
-    <Label styleClass="fancy-label" fx:id="createLobby" text="Create Lobby"/>
-    <Label styleClass="fancy-label" fx:id="joinLobby" text="Join Lobby"/>
+      spacing="20">
 
+    <ImageView fitWidth="550" preserveRatio="true">
+        <Image url="/images/loadagame.png"/>
+    </ImageView>
+    <Label styleClass="fancy-label" fx:id="loadLevelLabel" text="Load Level"/>
 </VBox>
