--- a/src/main/resources/views/layout_main_menu_play.fxml
+++ b/src/main/resources/views/layout_main_menu_play.fxml
@@ -6,12 +6,13 @@
 <?import javafx.scene.layout.VBox?>
 <VBox xmlns:fx="http://javafx.com/fxml"
       xmlns="http://javafx.com/javafx"
-      fx:controller="client.ui.MainMenuControllers.MainMenuLoadController"
+      fx:controller="client.ui.MainMenuControllers.MainMenuPlayController"
       prefHeight="400.0" prefWidth="600.0"
-      spacing="20" fx:id="startMenu">
-
+      spacing="20">
     <ImageView fitWidth="550" preserveRatio="true">
-        <Image url="/images/loadagame.png"/>
+        <Image url="/images/makeagame.png"/>
     </ImageView>
-    <Label styleClass="fancy-label" fx:id="loadLevelLabel" text="Load Level"/>
+    <Label styleClass="fancy-label" fx:id="createLobby" text="Create Lobby"/>
+    <Label styleClass="fancy-label" fx:id="joinLobby" text="Join Lobby"/>
+
 </VBox>
