--- a/src/main/resources/views/layout_game_routecard.fxml
+++ b/src/main/resources/views/layout_game_routecard.fxml
@@ -15,12 +15,17 @@
             routecards!
         </Text>
         <HBox fx:id="Routecardbox" spacing="10">
-            <ImageView onMouseClicked="#isClicked" fx:id="0"></ImageView>
-            <ImageView onMouseClicked="#isClicked" fx:id="1"></ImageView>
-            <ImageView onMouseClicked="#isClicked" fx:id="2"></ImageView>
-            <ImageView onMouseClicked="#isClicked" fx:id="3"></ImageView>
-            <ImageView onMouseClicked="#isClicked" fx:id="4"></ImageView>
+            <ImageView style="-fx-effect: dropshadow(three-pass-box, white, 10, 10, 0, 0);" onMouseClicked="#isClicked"
+                       fx:id="0"></ImageView>
+            <ImageView style="-fx-effect: dropshadow(three-pass-box, white, 10, 10, 0, 0);" onMouseClicked="#isClicked"
+                       fx:id="1"></ImageView>
+            <ImageView style="-fx-effect: dropshadow(three-pass-box, white, 10, 10, 0, 0);" onMouseClicked="#isClicked"
+                       fx:id="2"></ImageView>
+            <ImageView style="-fx-effect: dropshadow(three-pass-box, white, 10, 10, 0, 0);" onMouseClicked="#isClicked"
+                       fx:id="3"></ImageView>
+            <ImageView style="-fx-effect: dropshadow(three-pass-box, white, 10, 10, 0, 0);" onMouseClicked="#isClicked"
+                       fx:id="4"></ImageView>
         </HBox>
-        <Button>Confirm</Button>
+        <Button onMouseClicked="#ConfirmClicked">Confirm</Button>
     </VBox>
 </Pane>
