--- a/src/main/resources/views/layout_messages.fxml
+++ b/src/main/resources/views/layout_messages.fxml
@@ -8,6 +8,7 @@
 
     <fx:include source="overlay_build_message.fxml" fx:id="routes"/>
     <fx:include source="overlay_train_card_message.fxml" fx:id="train"/>
+    <fx:include source="overlay_route_card_message.fxml" fx:id="routeCards"/>
 
 
 </StackPane>
