--- a/src/main/resources/views/layout_game_routecard.fxml
+++ b/src/main/resources/views/layout_game_routecard.fxml
@@ -11,22 +11,16 @@
       fx:controller="client.ui.controllers.RouteCardController">
     <VBox spacing="10" alignment="CENTER"
           style="-fx-background-color: rgba(0,0,0,0.8); -fx-padding: 10 10 10 10; -fx-background-radius: 10">
-        <Text fx:id="Textroutecards" style="-fx-font-size: 20; -fx-font-weight: bold" fill="white" stroke="black">Choose
-            atleast two
-            routecards!
+        <Text fx:id="textRouteCards" style="-fx-font-size: 20; -fx-font-weight: bold" fill="white" stroke="black">
+            Choose atleast two routecards!
         </Text>
-        <HBox fx:id="Routecardbox" spacing="10">
-            <ImageView onMouseClicked="#isClicked"
-                       fx:id="0"></ImageView>
-            <ImageView onMouseClicked="#isClicked"
-                       fx:id="1"></ImageView>
-            <ImageView onMouseClicked="#isClicked"
-                       fx:id="2"></ImageView>
-            <ImageView onMouseClicked="#isClicked"
-                       fx:id="3"></ImageView>
-            <ImageView onMouseClicked="#isClicked"
-                       fx:id="4"></ImageView>
+        <HBox fx:id="routeCardBox" spacing="10">
+            <ImageView onMouseClicked="#onRouteCardClicked" fx:id="0"/>
+            <ImageView onMouseClicked="#onRouteCardClicked" fx:id="1"/>
+            <ImageView onMouseClicked="#onRouteCardClicked" fx:id="2"/>
+            <ImageView onMouseClicked="#onRouteCardClicked" fx:id="3"/>
+            <ImageView onMouseClicked="#onRouteCardClicked" fx:id="4"/>
         </HBox>
-        <Button onMousePressed="#ConfirmClicked">Confirm</Button>
+        <Button onMousePressed="#onConfirmClicked">Confirm</Button>
     </VBox>
 </Pane>
