Polished the initial routecards choice. Added message for tunnel building

--- a/src/main/resources/views/layout_full_game.fxml
+++ b/src/main/resources/views/layout_full_game.fxml
@@ -14,7 +14,8 @@
     <fx:include source="layout_routes_map.fxml" fx:id="routesMap" scaleX="1.3" scaleY="1.3" layoutX="843"
                 layoutY="194"/>
     <fx:include source="layout_game_bank.fxml" layoutX="16" layoutY="16"/>
-    <fx:include source="layout_game_routecard.fxml"/>
+    <fx:include source="layout_route_card_stack.fxml" layoutX="230" layoutY="680"/>
+    <fx:include source="layout_game_routecard.fxml" fx:id="initRouteCards"/>
 
     <!--Image Buttons-->
     <ImageView styleClass="imageButton" layoutX="1860" layoutY="76" onMouseEntered="#ScoreEntered"
@@ -25,10 +26,11 @@
                layoutX="1860" layoutY="16">
         <Image url="/images/OptionsButtonImage.png"/>
     </ImageView>
-    <!--Pause Menu-->
-    <fx:include source="overlay_pause_menu.fxml" fx:id="pauseMenu" layoutX="1920"/>
 
     <!--Overlay messages:-->
     <fx:include source="layout_messages.fxml" fx:id="messages" layoutY="1180" layoutX="460"/>
+
+    <!--Pause Menu-->
+    <fx:include source="overlay_pause_menu.fxml" fx:id="pauseMenu" layoutX="1920"/>
 
 </Pane>
